--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,9 +3,7 @@
     <%- include('./partials/head'); %>
 <body>
     <%- include('./partials/nav'); %>
-
     
-
-    <%- include(./partials/footer); %>
+    <%- include('./partials/footer'); %>
 </body>
 </html>
