--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,6 +3,8 @@
     <%- include('./partials/head'); %>
 <body>
     <%- include('./partials/nav'); %>
+
+    This is your home
     
     <%- include('./partials/footer'); %>
 </body>
