--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,3 +1,28 @@
 body {
-	background-color: #3a3a3a;
+	display: flex;
+	flex-direction: column;
+	width: min(100%, 2000px);
+}
+
+/* nav styles */
+
+nav {
+	/* border-bottom: 2px solid #3a3a3a; */
+	box-shadow: 0px -2px 20px rgba(0, 0, 0, 0.2);
+	display: flex;
+	padding: 20px;
+}
+
+nav > .site-title {
+	font-family: 'Anton', sans-serif;
+	font-size: 48px;
+	letter-spacing: 3px;
+}
+
+nav > ul {
+	align-items: center;
+	display: flex;
+	gap: 25px;
+	font-family: 'Poppins', sans-serif;
+	margin-left: auto;
 }
