--- a/views/404.ejs
+++ b/views/404.ejs
@@ -4,7 +4,11 @@
 <body>
     <%- include('./partials/nav'); %>
 
-    404 bitches
+    <div class="content content-404">
+        <h1>404</h1>
+        <p>Uh oh, it looks like you have taken a wrong turn!</p>
+        <a href="/">Return Home</a>
+    </div>
 
     <%- include('./partials/footer'); %>
 </body>
