--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -5,11 +5,24 @@ body {
 	width: min(100%, 2000px);
 }
 
+.a-hover {
+	transition: ease-in-out .2s;
+	-webkit-transition: ease-in-out .2s;
+	-moz-transition: ease-in-out .2s;
+	-o-transition: ease-in-out .2s;
+}
+
+.a-hover:hover {
+	text-shadow: 2px 2px #ffff00;
+	transform: translate(-2px, -2px);
+}
+
 /* ---------- nav styles ---------- */
 
 nav {
-	/* border-bottom: 2px solid #3a3a3a; */
+	align-items: center;
 	box-shadow: 0px -2px 20px rgba(0, 0, 0, 0.2);
+	color: #3a3a3a;
 	display: flex;
 	padding: 20px;
 }
@@ -18,6 +31,7 @@ nav > .site-title {
 	font-family: 'Anton', sans-serif;
 	font-size: 48px;
 	letter-spacing: 3px;
+	text-shadow: 3px 3px #ffff00;
 }
 
 nav > ul {
@@ -25,15 +39,62 @@ nav > ul {
 	display: flex;
 	gap: 25px;
 	font-family: 'Poppins', sans-serif;
+	letter-spacing: 1.5px;
 	margin-left: auto;
+}
+
+@media screen and (max-width: 590px) {
+	nav {
+		flex-direction: column;
+		gap: 15px;
+	}
+
+	nav > ul {
+		margin-left: 0;
+	}
+}
+
+/* ---------- content styles ---------- */
+
+.content {
+	align-items: center;
+	color: #3a3a3a;
+	display: flex;
+	font-family: 'Poppins', sans-serif;
+	flex-direction: column;
+	letter-spacing: 1.3px;
+	gap: 20px;
+	margin: 50px 0 0;
+	padding: 0 15%;
+}
+
+.content > h1 {
+	font-family: 'Anton', sans-serif;
+	font-size: 48px;
+	margin-right: auto;
 }
 
 /* ---------- footer styles ---------- */
 
 footer {
 	font-family: 'Poppins', sans-serif;
+	letter-spacing: 1.3px;
 	margin-top: auto;
 	padding: 10px 0;
 	text-align: center;
 	width: 100%;
+}
+
+/* ---------- 404 styles ---------- */
+
+.content-404 > h1 {
+	font-size: 128px;
+	margin-right: 0;
+	text-shadow: 5px 5px #ffff00;
+	/* transform: translate(-5px -5px); */
+}
+
+.content-404 > a {
+	font-size: 20px;
+	letter-spacing: 1.5px;
 }
