--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -5,9 +5,9 @@
     </div>
 
     <ul>
-        <li><a href="/">HOME</a></li>
-        <li><a href="/about">ABOUT ME</a></li>
-        <li><a href="/contact">CONTACT ME</a></li>
+        <li><a class="a-hover" href="/">HOME</a></li>
+        <li><a class="a-hover" href="/about">ABOUT ME</a></li>
+        <li><a class="a-hover" href="/contact">CONTACT ME</a></li>
     </ul>
 
 </nav>
