Structure content sections

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,10 @@
 <body>
     <%- include('./partials/nav'); %>
 
-    This is your home
+    <div class="content">
+        <h1 class="content-title">HOME</h1>
+        
+    </div>
     
     <%- include('./partials/footer'); %>
 </body>
