--- a/views/404.ejs
+++ b/views/404.ejs
@@ -7,7 +7,7 @@
     <div class="content content-404">
         <h1>404</h1>
         <p>Uh oh, it looks like you have taken a wrong turn!</p>
-        <a href="/">Return Home</a>
+        <a class="a-hover" href="/">RETURN HOME</a>
     </div>
 
     <%- include('./partials/footer'); %>
