--- a/views/about.ejs
+++ b/views/about.ejs
@@ -4,7 +4,10 @@
 <body>
     <%- include('./partials/nav'); %>
 
-    This is about
+    <div class="content">
+        <h1 class="content-title">ABOUT ME</h1>
+
+    </div>
 
     <%- include('./partials/footer'); %>
 </body>
