--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -4,7 +4,13 @@
 <body>
     <%- include('./partials/nav'); %>
 
-    This is contact
+    <div class="content">
+        <h1 class="content-title">CONTACT ME</h1>
+
+        <form>
+            
+        </form>
+    </div>
 
     <%- include('./partials/footer'); %>
 </body>
