--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -63,7 +63,6 @@ nav > ul {
 	font-family: 'Poppins', sans-serif;
 	flex-direction: column;
 	letter-spacing: 1.3px;
-	gap: 20px;
 	margin: 50px 0 0;
 	padding: 0 15%;
 }
@@ -73,6 +72,22 @@ nav > ul {
 	font-size: 48px;
 	margin-right: auto;
 	text-shadow: 3px 3px #ffff00;
+}
+
+.content > p {
+	background-color: #fff;
+	letter-spacing: 2px;
+	line-height: 1.5;
+	margin: 0 30px;
+	text-indent: 20px;
+}
+
+.content > p:first-of-type {
+	margin-top: 20px;
+}
+
+.content > p:not(:first-of-type) {
+	padding-top: 20px;
 }
 
 /* ---------- footer styles ---------- */
