--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -8,7 +8,17 @@
         <h1 class="content-title">CONTACT ME</h1>
 
         <form>
-            
+            <div class="contact-input">
+                <label for="email">Email Address</label>
+                <input type="text" id="email" name="email" />
+            </div>
+
+            <div class="contact-input">
+                <label for="email">Message</label>
+                <textarea type="text" id="email" name="email"></textarea>
+            </div>
+
+            <button type="submit">SEND</button>
         </form>
     </div>
 
