--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -5,14 +5,14 @@ body {
 	width: min(100%, 2000px);
 }
 
-.a-hover {
+.a-hover, button[type="submit"]:hover {
 	transition: ease-in-out .2s;
 	-webkit-transition: ease-in-out .2s;
 	-moz-transition: ease-in-out .2s;
 	-o-transition: ease-in-out .2s;
 }
 
-.a-hover:hover {
+.a-hover:hover, button[type="submit"]:hover {
 	text-shadow: 2px 2px #ffff00;
 	transform: translate(-2px, -2px);
 }
@@ -95,15 +95,20 @@ nav > ul {
 form, .contact-input {
 	display: flex;
 	flex-direction: column;
+	gap: 5px;
 	margin-top: 20px;
 }
 
 form {
-	width: 90%;
+	width: min(90%, 600px);
 }
 
 form > .contact-input {
 	width: 100%;
+}
+
+form > .contact-input > textarea {
+	resize: none;
 }
 
 form > button[type="submit"] {
