--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -74,6 +74,20 @@ nav > ul {
 	text-shadow: 3px 3px #ffff00;
 }
 
+.content > h2 {
+	font-family: 'Anton', sans-serif;
+	font-size: 24px;
+	margin: 20px 0 0 0;
+	padding-left: 30px;
+	text-align: left;
+	width: 100%;
+}
+
+.content > h2:not(:first-of-type) {
+	border-top :solid 3px #ffff00;
+	padding-top: 20px;
+} 
+
 .content > p {
 	background-color: #fff;
 	letter-spacing: 2px;
