--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -7,6 +7,7 @@ body {
 
 .a-hover, button[type="submit"]:hover {
 	transition: ease-in-out .2s;
+	transform: translate(0, 0);
 	-webkit-transition: ease-in-out .2s;
 	-moz-transition: ease-in-out .2s;
 	-o-transition: ease-in-out .2s;
@@ -175,4 +176,5 @@ footer {
 .content-404 > a {
 	font-size: 20px;
 	letter-spacing: 1.5px;
+	margin-top: 20px;
 }
